--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "url": "https://github.com/kroles1/react-music/issues"
   },
   "homepage": "https://github.com/kroles1/react-music#readme",
-
   "devDependencies": {
     "@babel/core": "^7.13.14",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -41,8 +40,10 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.4.3"
   },
   "jest": {
     "moduleNameMapper": {
